--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,9 @@
+# server_port配置
+nest_server_port = 3000
+
 # redis配置
-redis_server_host = locahost
-redis_server_host = 6379
+redis_server_host = 127.0.0.1
+redis_server_port = 6379
 
 # nodemailer配置
 nodemailer_host=smtp.qq.com
@@ -9,13 +12,13 @@ nodemailer_auth_user=2924249993@qq.com
 nodemailer_auth_pass=jklrrvpwsmtodcja
 
 # mysql配置
-mysql_server_host = http://127.0.0.1
+mysql_server_host = 127.0.0.1
 mysql_server_port = 3306
-mysql_server_username = test
-mysql_server_password = test
-mysql_server_database = test
+mysql_server_username = root
+mysql_server_password = root
+mysql_server_database = nest-cli
 
 # jwt配置
-jwt_secret = test
+jwt_secret = luckyCode
 jwt_access_token_expires_time = 30m
 jwt_refresh_token_express_time = 7d
