--- a/src/.env
+++ b/src/.env
@@ -19,6 +19,6 @@ mysql_server_password = eKSWmcNe2ahtAEiF
 mysql_server_database = nest-cli
 
 # jwt配置
-jwt_secret = luckyCode
+jwt_secret = 2b827987-797a-4b2e-b865-fd26d2f5733a
 jwt_access_token_expires_time = 30m
 jwt_refresh_token_express_time = 7d
