--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.10",
+    "ioredis": "^5.3.2",
     "mysql2": "^3.6.4",
     "nodemailer": "^6.9.7",
     "redis": "^4.6.11",
