--- a/src/.env
+++ b/src/.env
@@ -22,3 +22,6 @@ mysql_server_database = nest-cli
 jwt_secret = 2b827987-797a-4b2e-b865-fd26d2f5733a
 jwt_access_token_expires_time = 30m
 jwt_refresh_token_express_time = 7d
+
+# CryptoJS密钥
+crypto_secret = 646d7e82-a22f-4109-90c4-c556b00d45ae
