--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/crypto-js": "^4.2.1",
     "chalk": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "mysql2": "^3.6.4",
     "nodemailer": "^6.9.7",
